Bug 414691 - Wrong image selected when dragging and dropping reference images
Summary: Wrong image selected when dragging and dropping reference images
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-30 15:08 UTC by Tiar
Modified: 2020-08-27 12:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-11-30 15:08:47 UTC
SUMMARY
When I add multiple reference images using drag&drop, when I do it the second times and later, the image selected by the reference image tool is not the one that was recently added.

STEPS TO REPRODUCE
1. Drag&drop an image to Krita. Choose "As reference image" option. This image is now selected. 
2. Select Freehand Brush Tool, make a few strokes.
3. Drag&drop another picture to Krita. Choose "As reference image" option. 

OBSERVED RESULT
The first image is selected instead of the one that was just added.

EXPECTED RESULT
The recently added image should be selected.


SOFTWARE/OS VERSIONS
Krita

 Version: 4.3.0-prealpha (git 2d4ae8c)
 Languages: pl
 Hidpi: true

Qt

  Version (compiled): 5.11.1
  Version (loaded): 5.11.1

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.3.7-050307-generic
  Pretty Productname: Linux Mint 19.2
  Product Type: linuxmint
  Product Version: 19.2

OpenGL Info
 
  Vendor:  "Intel Open Source Technology Center" 
  Renderer:  "Mesa DRI Intel(R) Iris(R) Plus Graphics (Ice Lake 8x8 GT2) " 
  Version:  "3.0 Mesa 19.0.8" 
  Shading language:  "1.30" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::SwapBehavior(DoubleBuffer), swapInterval 0, colorSpace QSurfaceFormat::ColorSpace(DefaultColorSpace), profile  QSurfaceFormat::OpenGLContextProfile(CompatibilityProfile)) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::SwapBehavior(DoubleBuffer), swapInterval 0, colorSpace QSurfaceFormat::ColorSpace(DefaultColorSpace), profile  QSurfaceFormat::OpenGLContextProfile(NoProfile)) 
     Version: 3.0
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 15633 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

	Current Swap Location: /tmp
	Undo Enabled: 1
	Undo Stack Limit: 30
	Use OpenGL: 1
	Use OpenGL Texture Buffer: 1
	Use AMD Vectorization Workaround: 0
	Canvas State: OPENGL_SUCCESS
	Autosave Interval: 180
	Use Backup Files: 1
	Number of Backups Kept: 1
	Backup File Suffix: ~
	Backup Location: Same Folder as the File
	Use Win8 Pointer Input: 0
	Use RightMiddleTabletButton Workaround: 0
	Levels of Detail Enabled: 1
	Use Zip64: 0
Comment 1 Halla Rempt 2019-12-04 12:46:07 UTC
Hm, I get the image I selected added as reference image, but it's not on top of the reference image stack. Is that what you mean?
Comment 2 Bug Janitor Service 2019-12-19 04:33:11 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2020-01-03 04:33:11 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Tiar 2020-01-03 12:54:25 UTC
I didn't respond, did I...

I believe putting the image not on the very top might be related only if the next time one use vector tools or reference image tool it by default interacts with the image that is on the very top. What I meant as "it is now selected" was "it gets the vector frame and is ready to be interacted with"

Note: I do get it consistently but I think my steps to reproduce might be a bit imprecise.
Comment 5 wolthera 2020-08-07 18:33:30 UTC
Git commit 1f637dde030de2d681f809e63cc3bca865af212f by Wolthera van Hövell tot Westerflier.
Committed on 07/08/2020 at 18:31.
Pushed by woltherav into branch 'wolthera/bug-414691'.

Select last reference image whenever adding a reference image.

This seems somewhat hokey, especially because the selection doesn't
restore despite my best attempts to do this...

M  +13   -0    libs/ui/flake/KisReferenceImagesLayer.cpp

https://invent.kde.org/graphics/krita/commit/1f637dde030de2d681f809e63cc3bca865af212f
Comment 6 wolthera 2020-08-27 12:49:24 UTC
Git commit d27195660dc1fce18604b605ceb05d76c12add47 by Wolthera van Hövell.
Committed on 27/08/2020 at 12:49.
Pushed by woltherav into branch 'master'.

Select last reference image whenever adding a reference image.

M  +14   -5    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +1    -0    libs/ui/flake/KisReferenceImagesLayer.h
M  +5    -0    libs/ui/flake/kis_shape_layer.cc
M  +8    -0    libs/ui/flake/kis_shape_layer.h

https://invent.kde.org/graphics/krita/commit/d27195660dc1fce18604b605ceb05d76c12add47
Comment 7 wolthera 2020-08-27 12:50:51 UTC
Git commit 5d5791e92cc322ee9141cc0d0ee75982e1aa72ae by Wolthera van Hövell tot Westerflier, on behalf of Wolthera van Hövell.
Committed on 27/08/2020 at 12:50.
Pushed by woltherav into branch 'krita/4.3'.

Select last reference image whenever adding a reference image.

M  +14   -5    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +1    -0    libs/ui/flake/KisReferenceImagesLayer.h
M  +5    -0    libs/ui/flake/kis_shape_layer.cc
M  +8    -0    libs/ui/flake/kis_shape_layer.h

https://invent.kde.org/graphics/krita/commit/5d5791e92cc322ee9141cc0d0ee75982e1aa72ae