Select last reference image whenever adding a reference image.

BUG:414691